[project]
name = "legal-doc-processor"
version = "0.1.0"
description = "A LangGraph-based agent for processing legal documents"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.dependencies]
langgraph = ">=0.2.60"
langchain = "*"
langchain-openai = "*"
pydantic = "*" 